# kaneo-python-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  lint-and-format.yml  publish-pypi.yml
src/kaneo/: __init__.py  client.py  exceptions.py
src/kaneo/mcp/: server.py
src/kaneo/resources/: columns.py  config.py  projects.py  tasks.py
tests/: conftest.py  test_client.py  test_columns.py  test_config.py  test_dummy.py  test_mcp_server.py  test_models.py  test_projects.py  test_tasks.py
