[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaneo"
version = "0.1.0"
description = "Python client for the Kaneo project management API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.0",
    "flake8>=7.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kaneo"]

[tool.hatch.build.targets.wheel.force-include]
"src/kaneo/py.typed" = "kaneo/py.typed"
